# authorization-rs

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: configuration.rs  errors.rs  main.rs  persistence.rs  routes.rs  services.rs
src/configuration/: app_data_pool.rs  config.rs  jwt.rs
src/errors/: bad_request.rs  bad_token.rs  internal_server_error.rs
src/persistence/: permission.rs
src/persistence/permission/: permission_repository.rs
src/persistence/permission/model/: permission.rs
src/persistence/role/: role_repository.rs
src/persistence/role/model/: role.rs
src/persistence/user/: user_repository.rs
src/persistence/user/model/: user.rs
src/routes/: actuator.rs  authentication.rs  health.rs  permission.rs  role.rs  user.rs
src/routes/actuator/: actuator_route.rs
src/routes/authentication/: authentication_route.rs  dto.rs
src/routes/authentication/dto/: authentication_request.rs  authentication_response.rs  register_request.rs  update_request.rs
src/routes/health/: health_route.rs
src/routes/health/dto/: health_response.rs
src/routes/permission/: dto.rs  permission_route.rs
src/routes/permission/dto/: create_permission.rs  permission.rs  update_permission.rs
src/routes/role/: dto.rs  role_route.rs
src/routes/role/dto/: create_role.rs  role.rs  update_role.rs
src/routes/user/: dto.rs  user_route.rs
src/routes/user/dto/: create_user.rs  update_password.rs  update_user.rs  user.rs
src/services/permission/: permission_service.rs
src/services/role/: role_service.rs
src/services/user/: user_service.rs
