[package]
name = "authorization-rs"
authors = ["CodeDead <admin@codedead.com>"]
description = "Authorization and authentication API"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/CodeDead/authorization-rs"
license = "GPL-3.0"
keywords = ["api", "authorization", "mongo", "actix", "actix-web", "codedead"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
mongodb = "2.1.0"
futures = "0.3.21"
actix-web = "4.0.1"
actix-cors = "0.6.1"
jsonwebtoken = "8.0.1"
config = "0.13.0"
dotenv = "0.15.0"
bcrypt = "0.12.1"
regex = "1.5.5"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1
strip = true
